# image-to-svg

./: .gitignore  pyproject.toml  readme.md
flask_app/: __init__.py  server.py
src/flask_app/: __init__.py  server.py
src/image_to_svg/: __init__.py  convert.py  svg_drawing_cli.py
tests/: test_flask_app.py
